--- a/packages/nuxt-module/package.json
+++ b/packages/nuxt-module/package.json
@@ -69,8 +69,8 @@
     },
     "dependencies": {
         "@nuxt/kit": "^3.7.3",
-        "@primeuix/styled": "^0.3.2",
-        "@primeuix/utils": "^0.3.2",
+        "@primeuix/styled": "^0.5.0",
+        "@primeuix/utils": "^0.5.1",
         "primevue-vaultic": "workspace:*",
         "@primevue/auto-import-resolver": "workspace:*",
         "@primevue/metadata": "workspace:*",
@@ -78,7 +78,7 @@
         "pathe": "^1.1.2"
     },
     "devDependencies": {
-        "@primeuix/themes": "catalog:",
+        "@primeuix/themes": "^1.0.0",
         "@nuxt/devtools": "^2.1.0",
         "@nuxt/eslint-config": "^1.1.0",
         "@nuxt/module-builder": "^0.8.4",
@@ -86,7 +86,7 @@
         "@nuxt/test-utils": "^3",
         "@types/node": "latest",
         "changelogen": "^0.6.0",
-        "nuxt": "catalog:app",
+        "nuxt": "3.15.4",
         "vitest": "^3.0.7",
         "vue-tsc": "~2.1.6"
     }
