--- a/packages/primevue/package.json
+++ b/packages/primevue/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "primevue",
+    "name": "primevue-vaultic",
     "version": "4.3.1",
     "author": "PrimeTek Informatics",
     "description": "PrimeVue is an open source UI library for Vue featuring a rich set of 80+ components, a theme designer, various theme alternatives such as Material, Bootstrap, Tailwind, premium templates and professional support. In addition, it integrates with PrimeBlock, which has 370+ ready to use UI blocks to build spectacular applications in no time.",
@@ -352,8 +352,8 @@
         "vitest": "^0.29.8"
     },
     "dependencies": {
-        "@primeuix/styled": "^0.3.2",
-        "@primeuix/utils": "^0.3.2",
+        "@primeuix/styled": "^0.5.0",
+        "@primeuix/utils": "^0.5.1",
         "@primeuix/styles": "^1.0.0",
         "@primevue/core": "workspace:*",
         "@primevue/icons": "workspace:*"
